--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,7 +1,12 @@
-# internal coverage with PR comment and badge v0.0.3
-# updated actions and coverage value regex, no fork isolation yet
-# badge and comment job logic should be tuned for personal vs org use
-# (see badge job comments below)
+# internal coverage with PR comment and badge v0.0.5
+# Note this works for public orgs but only for "internal" pull
+# requests. In the case of fork PRs, there needs to be org-level
+# github app with private key => ACCESS_TOKEN, with more job isolation
+# and output passing in this workflow.
+#
+# This version has updated actions and coverage value regex, no fork isolation
+# yet. Badge and comment job logic should be tuned for personal vs org use
+# (fork PRs still needs the big refactor; see badge job comments below).
 name: Coverage
 
 on:
@@ -17,12 +22,12 @@ jobs:
     name: Prepare CI environment
     runs-on: ubuntu-20.04
     outputs:
-      commit_message: ${{ steps.get_commit_message.outputs.commit_message }}
+      #commit_message: ${{ steps.get_commit_message.outputs.commit_message }}
       branch: ${{ steps.extract_branch.outputs.branch }}
 
     steps:
     - name: Checkout Project
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         # We need to fetch with a depth of 2 for pull_request so we can do HEAD^2
         fetch-depth: 2
@@ -31,13 +36,13 @@ jobs:
       run: |
         bash -c set
 
-    - name: "Get commit message"
-      id: get_commit_message
-      env:
-        COMMIT_PUSH: ${{ github.event.head_commit.message }}
-      run: |
-        COMMIT_MESSAGE="${COMMIT_PUSH:-$(git log --format=%B -n 1 HEAD^2)}"
-        echo "::set-output name=commit_message::${COMMIT_MESSAGE}"
+    #- name: "Get commit message"
+      #id: get_commit_message
+      #env:
+        #COMMIT_PUSH: ${{ github.event.head_commit.message }}
+      #run: |
+        #COMMIT_MESSAGE="${COMMIT_PUSH:-$(git log --format=%B -n 1 HEAD^2)}"
+        #echo "commit_message=${COMMIT_MESSAGE}" >> $GITHUB_OUTPUT
 
     - name: Extract branch name
       id: extract_branch
@@ -52,7 +57,7 @@ jobs:
         else
             EXPORT_VALUE="${TMP_GITHUB_REF}"
         fi
-        echo "##[set-output name=branch;]${EXPORT_VALUE}"
+        echo "branch=${EXPORT_VALUE}" >> $GITHUB_OUTPUT
 
   base:
     name: Base coverage
@@ -62,7 +67,7 @@ jobs:
       base_cov: ${{ steps.get_base.outputs.base_cov }}
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         ref: badges
         path: badges
@@ -83,13 +88,13 @@ jobs:
         else
             EXPORT_VALUE="${TMP_GITHUB_REF}"
         fi
-        echo "##[set-output name=base_branch;]${EXPORT_VALUE}"
+        echo "base_branch=${EXPORT_VALUE}" >> $GITHUB_OUTPUT
         if [ -f "${EXPORT_VALUE}/${FILE}" ]
         then
             echo "Base coverage found on ${EXPORT_VALUE}"
             BASE_COV=$(cat "${EXPORT_VALUE}/${FILE}")
             echo "Base coverage is: ${BASE_COV}"
-            echo "##[set-output name=base_cov;]${BASE_COV}"
+            echo "base_cov=${BASE_COV}" >> $GITHUB_OUTPUT
         else
             echo "Base coverage NOT found on ${EXPORT_VALUE}!!"
         fi
@@ -103,12 +108,12 @@ jobs:
     - name: Check github variables
       # NOTE base coverage env var may be empty here
       env:
-        COMMIT_MESSAGE: ${{ needs.pre_ci.outputs.commit_message }}
+        #COMMIT_MESSAGE: ${{ needs.pre_ci.outputs.commit_message }}
         EXPORT_VALUE: ${{ needs.pre_ci.outputs.branch }}
         BASE_BRANCH: ${{ needs.base.outputs.base_branch }}
         BASE_COVERAGE: ${{ needs.base.outputs.base_cov }}
       run: |
-        echo "Commit message: ${COMMIT_MESSAGE}"
+        #echo "Commit message: ${COMMIT_MESSAGE}"
         echo "Export value (head_ref): ${EXPORT_VALUE}"
         echo "Base value (base_ref): ${BASE_BRANCH}"
         echo "Base coverage (percent): ${{ env.BASE_COVERAGE }}"
@@ -128,11 +133,11 @@ jobs:
       PIP_DOWNLOAD_CACHE: ${{ github.workspace }}/../.pip_download_cache
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v4
       with:
         python-version: '3.9'
 
@@ -168,21 +173,23 @@ jobs:
         filename: coverage.xml
         output: 'both'
 
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v3
       with:
         name: src_coverage_rpts
         path: |
           coverage.xml
           code-coverage-results.txt
+        retention-days: 30
 
     - name: Check code coverage
       id: coverage
       env:
         VALUE: "Branch Rate"
       run: |
-        COVERAGE=$( cat code-coverage-results.txt | grep -e ^Summary | grep -o -E "${VALUE} = .{2}" | awk '{ print $4 }' )
-        echo "##[set-output name=coverage;]${COVERAGE}"
-        echo "##[set-output name=coverage-rounded-display;]${COVERAGE}%"
+        COVERAGE=$( cat code-coverage-results.txt | grep -e ^Summary | grep -o -E "${VALUE} = .{3}" | egrep -o '([0-9]+)' )
+        echo "coverage=${COVERAGE}" >> $GITHUB_OUTPUT
+        echo "coverage-rounded-display=${COVERAGE}%" >> $GITHUB_OUTPUT
+        echo "Current coverage is: ${COVERAGE}%"
 
     - name: Code Coverage Summary Report
       uses: irongut/CodeCoverageSummary@v1.3.0
@@ -194,7 +201,7 @@ jobs:
 
     - name: Add Coverage PR Comment
       uses: marocchino/sticky-pull-request-comment@v2
-      if: ${{ github.event_name == 'pull_request' }}
+      if: github.event_name == 'pull_request' && (github.event.pull_request.author_association == 'MEMBER' || github.actor == github.repository_owner)
       with:
         header: coverage
         recreate: true
@@ -215,10 +222,12 @@ jobs:
         COVERAGE: ${{ needs.cov_data.outputs.coverage }}
         COVERAGE_ROUNDED: ${{ needs.cov_data.outputs.coverage-rounded-display }}
         BASE_COVERAGE: ${{ needs.base.outputs.base_cov }}
+        MEMBER: ${{ github.event.pull_request.author_association }}
       run: |
         echo "Coverage: ${COVERAGE}"
         echo "Coverage Rounded: ${COVERAGE_ROUNDED}"
         echo "Coverage on Base Branch: ${BASE_COVERAGE}"
+        echo "Author assoc: ${MEMBER}"
 
   comment_cov_change:
     name: Comment on PR with coverage delta
@@ -283,7 +292,7 @@ jobs:
 
     - name: Comment PR with test coverage delta
       uses: marocchino/sticky-pull-request-comment@v2
-      if: env.HAVE_BASE_COVERAGE == 'true'
+      if: env.HAVE_BASE_COVERAGE == 'true' && (github.event.pull_request.author_association == 'MEMBER' || github.actor == github.repository_owner)
       with:
         header: delta
         recreate: true
@@ -302,20 +311,20 @@ jobs:
     name: Generate badge image with test coverage value
     runs-on: ubuntu-20.04
     needs: [test, pre_ci]
-    if: ${{ github.event_name == 'push' }}
+    if: github.event_name == 'push'
     outputs:
       url: ${{ steps.url.outputs.url }}
       markdown: ${{ steps.url.outputs.markdown }}
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         ref: badges
         path: badges
 
     # Use the output from the `coverage` step
     - name: Generate the badge SVG image
-      uses: emibcn/badge-action@v1
+      uses: emibcn/badge-action@v1.2.4
       id: badge
       with:
         label: 'Branch Coverage'
