chg: dev: add or-true workaround for valgrind command_check
* this makes it match the other valgrind checks

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -77,7 +77,7 @@ commands =
     grind: bash -c 'valgrind --tool=memcheck --xml=yes --xml-file=json_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./json_test || true'
     # valgrind error exit without || true =>  (exited with code 127)
     grind: bash -c 'valgrind --tool=memcheck --xml=yes --xml-file=multithread_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./multithread_test || true'
-    grind: bash -c 'valgrind --tool=memcheck --xml=yes --xml-file=command_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./command_result_test'
+    grind: bash -c 'valgrind --tool=memcheck --xml=yes --xml-file=command_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./command_result_test || true'
     grind: bash -c '[[ -f json_check.xml ]] && valgrind-ci json_check.xml --number-of-errors'
     grind: bash -c '[[ -f json_check.xml ]] && valgrind-ci json_check.xml --summary'
     grind: valgrind-ci multithread_check.xml --number-of-errors
