--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -93,7 +93,7 @@ jobs:
         RIPC_SERVER_PATH: "${{ env.TEMP_DIR }}/socket"
       run: |
         make cov
-        gcovr -s -b src/.libs/ test/
+        gcovr --config gcovr.cfg -s -b src/.libs/ test/
 
     - name: Test (ctest)
       if: matrix.os == 'ubuntu-18.04'
