update changelog for 0.1.0 release
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -196,9 +196,9 @@ shell=False)
 ##        Examples:
 ##           - makotemplate("restructuredtext")
 ##
-#output_engine = rest_py
+output_engine = rest_py
 #output_engine = mustache("restructuredtext")
-output_engine = mustache(".gitchangelog-keepachangelog.tpl")
+#output_engine = mustache(".gitchangelog-keepachangelog.tpl")
 #output_engine = mustache("markdown")
 #output_engine = makotemplate("restructuredtext")
 
