fix: dev: update deprecated tox param => allowlist_externals
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ setenv =
     clang: ENV_LLVM_VER = {env:ENV_LLVM_VER:12}
     {auto,bionic}: ENV_RIPC_RUNTIME_DIR = {env:ENV_RIPC_RUNTIME_DIR:{envtmpdir}}
 
-whitelist_externals =
+allowlist_externals =
     {tests,clang,ctest,bionic,lint,grind,clean,auto,autoclean,dist}: bash
     {tests,clang,bionic,grind,cover}: mkdir
 
