--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,16 @@ build/
 environment.yml
 # repolite
 ext/
+# virtual env
+.env
+.tox
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
 # coverage files
 test/*.out
 # compilation files
