chg: temp workaround for unexpected coverage value from gcov
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -64,14 +64,14 @@ commands =
     clang: bash -c 'cmake --build . --target coverage'
     lcov: lcov_cobertura build/coverage/lcov.info --base-dir {toxinidir} --output coverage.xml
     lint: bash -c 'cpplint --output=gsed {toxinidir}/src/* {toxinidir}/inc/*'
-    auto: gcovr -s -b src/.libs/ test/
+    auto: gcovr --gcov-ignore-parse-errors=negative_hits.warn -s -b src/.libs/ test/
     auto: gcovr --xml-pretty -o coverage.xml src/.libs/ test/
-    {bionic,tests}: gcovr -s -b -r {toxinidir} .
+    {bionic,tests}: gcovr --gcov-ignore-parse-errors=negative_hits.warn -s -b -r {toxinidir} .
     bionic: gcovr -r {toxinidir} --xml-pretty -o coverage.xml .
     bionic: gcovr -r {toxinidir} --html --html-details -o {toxinidir}/coverage/coverage.html .
     {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR=$ENV_RIPC_RUNTIME_DIR {toxinidir}/scripts/run_redis.sh stop'
     ctest: bash -c 'ctest --build-generator {posargs:"Unix Makefiles"} --build-and-test . build --build-options -DWITH_COVERAGE=ON -DCMAKE_BUILD_TYPE=Debug --test-command ctest --rerun-failed --output-on-failure -V'
-    ctest: gcovr -s -b build/
+    ctest: gcovr --gcov-ignore-parse-errors=negative_hits.warn -s -b build/
     cover: gcovr --xml-pretty -o coverage.xml build/
     # runtime assertion error without || true =>  (SIGSEGV)) (exited with code -11)
     grind: bash -c 'valgrind --tool=memcheck --xml=yes --xml-file=json_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./json_test || true'
