--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,11 +72,25 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip wheel
+          pip install tox
+
+      - name: Build dist pkg
+        run: |
+          tox -e dist
+
       # download all artifacts to project dir
       - uses: actions/download-artifact@v3
 
       - name: Generate changes file
-        uses: sarnold/gitchangelog-action@v1
+        uses: sarnold/gitchangelog-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN}}
 
@@ -93,3 +107,4 @@ jobs:
           prerelease: false
           files: |
             packages/*.deb
+            redis-ipc*.tar.gz
