--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,12 @@ skip_missing_interpreters = true
 skipsdist = true
 
 [testenv]
-envdir = {toxinidir}/.env
+# uncomment next line to force older system python for local testing
+#basepython = python3.8
+install_command = pip install {opts} {packages}
 skip_install = true
+envdir = {toxinidir}/.env
+runner = ignore_env_name_mismatch
 
 passenv =
     pythonLocation
@@ -16,7 +20,9 @@ passenv =
     PIP_DOWNLOAD_CACHE
 
 setenv =
-    clang: ENV_LLVM_VER = {env:ENV_LLVM_VER:12}
+    clang: CC =	{env:CC:clang}
+    clang: CXX = {env:CXX:clang++}
+    clang: ENV_LLVM_VER = {env:ENV_LLVM_VER:15}
     {auto,bionic}: ENV_RIPC_RUNTIME_DIR = {env:ENV_RIPC_RUNTIME_DIR:{envtmpdir}}
 
 allowlist_externals =
@@ -27,15 +33,15 @@ changedir =
     {tests,bionic,clang,grind}: build
 
 deps =
-    {auto,dist,tests,clang,ctest,bionic,grind,lint,cover}: pip>=19.0.1
-    {tests,clang,ctest,bionic,grind}: cmake
-    {tests,clang,ctest,bionic,grind}: ninja
-    {auto,tests,ctest,bionic,cover}: gcovr
-    lcov: lcov_cobertura
-    {auto,dist}: this-cli
+    pip>=21.0.1
+    gcovr
+    {tests,bionic,clang,ctest,grind,lcov}: lcov_cobertura
+    {tests,bionic,clang,ctest,grind,lcov}: cmake
+    {tests,bionic,clang,ctest,grind,lcov}: ninja
+    {tests,bionic,clang,ctest,grind,lcov}: ValgrindCI
+    {auto,dist,cover}: this-cli
     lint: cpplint
     lint: beautysh
-    grind: ValgrindCI
 
 commands_pre =
     bionic: mkdir -p {toxinidir}/coverage
@@ -85,7 +91,7 @@ commands =
     # xml exception (no errors in report) =>  junk after document element
     #grind: bash -c '[[ -f command_check.xml ]] && valgrind-ci command_check.xml --number-of-errors || true'
     #grind: bash -c '[[ -f command_check.xml ]] && valgrind-ci command_check.xml --summary || true'
-    clean: bash -c 'rm -rf build/ coverage/ coverage.xml'
+    clean: bash -c 'rm -rf build/ coverage/ coverage.xml *.gcov'
     autoclean: bash -c 'make distclean-recursive'
     autoclean: bash -c 'rm -rf Makefile Makefile.in aclocal.m4 ar-lib autom4te.cache/ compile config.* coverage* configure configure~ depcomp install-sh libltdl/ ltmain.sh m4/ missing src/Makefile.in test-driver test/gmon.out test/Makefile.in'
 
