chg: dev: one more gcovr workaround in github workflow env.yml
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -93,7 +93,7 @@ jobs:
         RIPC_SERVER_PATH: "${{ env.TEMP_DIR }}/socket"
       run: |
         make cov
-        gcovr --config gcovr.cfg -s -b src/.libs/ test/
+        gcovr --gcov-ignore-parse-errors --config gcovr.cfg -s -b src/.libs/ test/
 
     - name: Test (ctest)
       if: matrix.os == 'ubuntu-22.04'
@@ -101,7 +101,7 @@ jobs:
         RIPC_SERVER_PATH: "${{ env.TEMP_DIR }}/socket"
       run: |
         ctest --build-target cov --test-dir build/
-        gcovr --config gcovr.cfg -r . -s -b build/
+        gcovr --gcov-ignore-parse-errors --config gcovr.cfg -r . -s -b build/
 
     - name: Cleanup
       env:
